Trying larger top padding to fix issue with overlapping nav element

--- a/web_app/static/web_app/style.css
+++ b/web_app/static/web_app/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Oswald', sans-serif;
-    padding-top: 6em;
+    padding-top: 8em;
 }
 
 
